--- a/index.html
+++ b/index.html
@@ -398,9 +398,12 @@
 
     <footer>
       GIGACHAD ALPHA (Still Beta) - Powered by Base, Forged by Clanker, Sustained by Pure Delusion.<br>
-      Nothing here is financial advice. Everything here is a confession.
+      GIGACHAD ALPHA (Still Beta) is a cultural, humorous, and community-driven digital meme asset.
+      It is not a financial instrument, security, investment contract, or promise of future value
+      Nothing here is financial advice.
     </footer>
   </div>
 </body>
 </html>
+
 
