Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <div class="hero-buttons">
             <a class="btn btn-primary" href="#vault">Praise β</a>
             <!-- replace href with Dex/Clanker link -->
-            <a class="btn btn-outline" href="#" target="https://dexscreener.com/base/0xbf8de131a84ec76400ecdec68cea8c9403c8bb136d6cf7f95591059db9898697" rel="noopener">Buy on Base</a>
+            <a class="btn btn-outline" href="https://dexscreener.com/base/0xbf8de131a84ec76400ecdec68cea8c9403c8bb136d6cf7f95591059db9898697" target="_blank" rel="noopener">Buy on Base</a>
           </div>
           <div class="hero-meta">
             96% delusion • 4% liquidity • 0% roadmap • 100% UNI BASE ENERGY
@@ -335,7 +335,7 @@
             probably about to happen.
           </p>
           <!-- Replace # with a block-explorer link for the vault -->
-          <a class="btn btn-outline" href="#" target="https://basescan.org/token/0x6d0b8eb75e9d6735cc301c3a6e82adee43590b07" rel="noopener">Track the Vault</a>
+          <a class="btn btn-outline" href="https://basescan.org/token/0x6d0b8eb75e9d6735cc301c3a6e82adee43590b07" target="_blank" rel="noopener">Track the Vault</a>
         </div>
       </section>
 
@@ -405,5 +405,6 @@
   </div>
 </body>
 </html>
+
 
 
