Add favicon and enhance HTML structure
Added a favicon and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>GIGACHAD ALPHA (Still Beta)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="GIGACHAD ALPHA (Still Beta) – the first sovereign paradox of Base. Alpha flex, Beta vibes.">
+   <link rel="icon" type="image/png" href="./GCHAlphaBeta.png" />
   <style>
     :root {
       --bg: #020617;
@@ -405,6 +406,7 @@
   </div>
 </body>
 </html>
+
 
 
 
