Fix HTML encoding issues in index.html
Links to games hub

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             A memetic anomaly that refuses to leave beta phase, powered by pure delusion and 20% Vault of β.
           </p>
           <div class="hero-buttons">
-            <a class="btn btn-primary" href="#vault">Praise β</a>
+            <a class="btn btn-primary" href="../games/index.html">Praise β</a>
             <!-- replace href with Dex/Clanker link -->
             <a class="btn btn-outline" href="https://dexscreener.com/base/0xbf8de131a84ec76400ecdec68cea8c9403c8bb136d6cf7f95591059db9898697" target="_blank" rel="noopener">Buy on Base</a>
           </div>
@@ -406,6 +406,7 @@
   </div>
 </body>
 </html>
+
 
 
 
