--- a/games/index.html
+++ b/games/index.html
@@ -1,323 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GCHBETA · Chad.exe Games Hub</title>
-<style>
-  :root {
-    --bg-dark: #02030a;
-    --bg-card: rgba(8, 16, 40, 0.95);
-    --accent: #4ab6ff;
-    --accent-soft: rgba(74, 182, 255, 0.3);
-    --text-main: #eef7ff;
-    --text-muted: #9fb4d9;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-    min-height: 100vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    color: var(--text-main);
-    background: radial-gradient(circle at top, #050816 0%, #020309 40%, #000000 100%);
-    display: flex;
-    flex-direction: column;
-  }
-
-  .stars {
-    position: fixed;
-    inset: 0;
-    pointer-events: none;
-    background-image:
-      radial-gradient(circle at 20% 20%, rgba(255,255,255,0.35) 0, transparent 55%),
-      radial-gradient(circle at 80% 10%, rgba(86,140,255,0.45) 0, transparent 55%),
-      radial-gradient(circle at 10% 80%, rgba(72,196,255,0.4) 0, transparent 55%);
-    opacity: 0.15;
-    mix-blend-mode: screen;
-    z-index: 0;
-  }
-
-  .wrap {
-    position: relative;
-    z-index: 1;
-    max-width: 1100px;
-    width: 100%;
-    padding: 32px 16px 60px;
-    margin: 0 auto;
-  }
-
-  header {
-    text-align: center;
-    margin-bottom: 32px;
-  }
-
-  header h1 {
-    margin: 0;
-    font-size: 1.8rem;
-    letter-spacing: 0.16em;
-    text-transform: uppercase;
-  }
-
-  header .tagline {
-    margin-top: 8px;
-    font-size: 0.9rem;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    color: var(--text-muted);
-  }
-
-  header .alpha-beta {
-    margin-top: 10px;
-    font-size: 0.9rem;
-    color: var(--accent);
-  }
-
-  .games-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 18px;
-  }
-
-  .card {
-    position: relative;
-    border-radius: 18px;
-    border: 1px solid rgba(92, 157, 255, 0.5);
-    background: var(--bg-card);
-    box-shadow:
-      0 0 18px rgba(0,0,0,0.9),
-      0 0 24px rgba(10, 40, 100, 0.7);
-    padding: 16px 16px 18px;
-    overflow: hidden;
-  }
-
-  .card::before {
-    content: "";
-    position: absolute;
-    inset: -40%;
-    background: radial-gradient(circle at top, var(--accent-soft), transparent 60%);
-    opacity: 0;
-    transition: opacity 0.25s ease-out;
-  }
-
-  .card.featured::before {
-    opacity: 0.6;
-  }
-
-  .card:hover::before {
-    opacity: 0.8;
-  }
-
-  .card-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    margin-bottom: 6px;
-  }
-
-  .pill {
-    font-size: 0.7rem;
-    padding: 3px 8px;
-    border-radius: 999px;
-    border: 1px solid rgba(74, 182, 255, 0.6);
-    color: var(--accent);
-    text-transform: uppercase;
-    letter-spacing: 0.14em;
-  }
-
-  .pill.beta {
-    border-color: rgba(255, 179, 64, 0.7);
-    color: #ffcc75;
-  }
-
-  .card-title {
-    font-size: 1rem;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-  }
-
-  .version {
-    font-size: 0.8rem;
-    color: var(--text-muted);
-    letter-spacing: 0.08em;
-  }
-
-  .card-body {
-    font-size: 0.85rem;
-    color: var(--text-muted);
-    margin-top: 6px;
-    line-height: 1.45;
-  }
-
-  .meta {
-    margin-top: 10px;
-    font-size: 0.75rem;
-    color: var(--text-muted);
-  }
-
-  .meta span {
-    opacity: 0.9;
-  }
-
-  .card-actions {
-    margin-top: 14px;
-    display: flex;
-    gap: 8px;
-    flex-wrap: wrap;
-  }
-
-  .btn {
-    font-size: 0.8rem;
-    padding: 6px 12px;
-    border-radius: 999px;
-    border: 1px solid rgba(90, 170, 255, 0.8);
-    background: rgba(5, 18, 40, 0.96);
-    color: #eaf3ff;
-    text-decoration: none;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: background 0.15s, box-shadow 0.15s, transform 0.08s;
-  }
-
-  .btn:hover {
-    background: rgba(18, 48, 90, 0.98);
-    box-shadow: 0 0 14px rgba(80, 160, 255, 0.7);
-    transform: translateY(-1px);
-  }
-
-  .btn.secondary {
-    border-color: rgba(130, 150, 190, 0.8);
-    color: #c4d0ea;
-  }
-
-  .coming-soon {
-    opacity: 0.6;
-  }
-
-  footer {
-    margin-top: 32px;
-    text-align: center;
-    font-size: 0.8rem;
-    color: var(--text-muted);
-  }
-
-  footer a {
-    color: var(--accent);
-    text-decoration: none;
-  }
-
-  footer a:hover {
-    text-decoration: underline;
-  }
-
-  @media (max-width: 640px) {
-    header h1 {
-      font-size: 1.4rem;
-    }
-    .games-grid {
-      gap: 14px;
-    }
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Chad.exe v0.1 — GIGACHAD ALPHA (Still Beta)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="../GCHAlphaBeta.png" />
+  <link rel="stylesheet" href="../games/css/games.css">
+  <!-- reuse shared state + beta field if needed -->
+  <script defer src="../chad.js"></script>
+  <script defer src="../games/games.js"></script>
 </head>
-<body>
+<body class="games-body">
+  <div class="games-shell">
+    <aside class="games-sidebar">
+      <div class="side-header">
+        <span class="side-title">Chad.exe OS</span>
+        <span class="side-sub">v0.1 · Still Beta</span>
+      </div>
 
-<div class="stars"></div>
+      <div class="side-section">
+        <button class="side-link active" data-panel="clickerPanel">⚡ Chad.exe Clicker</button>
+        <button class="side-link" data-panel="statsPanel">📊 Beta Metrics</button>
+        <button class="side-link" data-panel="crashPanel">💥 Crash Log</button>
+      </div>
 
-<div class="wrap">
-  <header>
-    <h1>GCHBETA · CHAD.EXE GAMES LAB</h1>
-    <div class="tagline">INTERACTIVE RITUALS FOR THE ALPHA (STILL BETA)</div>
-    <div class="alpha-beta">Some of this might work. All of this is still Beta.</div>
-  </header>
+      <div class="side-section wallet-box">
+        <button id="walletConnect" class="wallet-btn">Connect Wallet</button>
+        <div class="wallet-addr" id="walletAddr">Wallet: not connected</div>
+      </div>
 
-  <section class="games-grid">
+      <div class="side-footer">
+        <a href="../index.html" class="back-home">← Return to main site</a>
+      </div>
+    </aside>
 
-    <!-- FEATURED · Chad.exe v0.1 (Clicker) -->
-    <article class="card featured">
-      <div class="card-header">
-        <div>
-          <div class="card-title">Chad.exe v0.1</div>
-          <div class="version">(Clicker · 0–100% Ego Load)</div>
+    <main class="games-main">
+      <!-- CLICKER PANEL -->
+      <section class="panel visible" id="clickerPanel">
+        <header class="panel-header">
+          <h1>Chad.exe v0.1 — Ego Uplinker</h1>
+          <p>Every click charges the β ego-core. Hit 100% to attempt v2.0. Spoiler: it always crashes.</p>
+        </header>
+
+        <div class="clicker-layout">
+          <div class="clicker-core">
+            <div class="click-display">
+              <div class="click-label">β CORE CHARGE</div>
+              <div class="click-value" id="clickPercent">0%</div>
+              <div class="click-sub">
+                Crashes logged: <span id="crashCount">0</span>
+              </div>
+            </div>
+
+            <button id="clickButton" class="click-button" type="button">
+              <span class="click-beta">β</span>
+              <span class="click-caption">CLICK HERE, BETA</span>
+            </button>
+
+            <div class="charge-bar">
+              <div class="charge-fill" id="chargeFill"></div>
+            </div>
+          </div>
+
+          <div class="clicker-side">
+            <div class="mini-card">
+              <h2>Patch Notes</h2>
+              <ul>
+                <li>v0.1 — added button.</li>
+                <li>v0.1.1 — still beta.</li>
+                <li>v0.1.2 — crash logs now sarcastic.</li>
+              </ul>
+            </div>
+            <div class="mini-card">
+              <h2>Crash Message</h2>
+              <p id="crashMessage">No catastrophic ego failures… yet.</p>
+            </div>
+          </div>
         </div>
-        <div class="pill beta">Live · Still Beta</div>
-      </div>
-      <div class="card-body">
-        Click the sacred jawline artifact to charge GigaChad from 0% to 100%.
-        <br><br>
-        At 100%, he tries to upgrade to v2.0.  
-        The universe disagrees. He crashes. You get a new “Crash” on the counter.
-      </div>
-      <div class="meta">
-        <span>🏛 Cosmic BASE temple · β spirits · lightning strikes on failure.</span>
-      </div>
-      <div class="card-actions">
-        <!-- If clicker is at the site root: use "/" -->
-        <!-- If it's in /chad-clicker/ or similar, update href accordingly -->
-        <a class="btn" href="https://gchbeta.github.io/GCA/games/GIGACHAD_ALPHA_CLICKER_BETA/index.html">Launch Chad.exe</a>
-        <button class="btn secondary" type="button"
-          onclick="navigator.clipboard.writeText(window.location.origin || '')">
-          Copy Lab Origin
-        </button>
-      </div>
-    </article>
+      </section>
 
-    <!-- Coming Soon · Vault Guardian -->
-    <article class="card coming-soon">
-      <div class="card-header">
-        <div>
-          <div class="card-title">Vault Guardian</div>
-          <div class="version">(Tower Defense · 20% Vault of β)</div>
+      <!-- STATS PANEL -->
+      <section class="panel" id="statsPanel">
+        <header class="panel-header">
+          <h1>β Metrics Dashboard</h1>
+          <p>Tokenomics-inspired meters. Totally serious science.</p>
+        </header>
+
+        <div class="metrics-grid">
+          <div class="metric-card">
+            <div class="metric-header">
+              <span>Delusion Level</span>
+              <span id="delusionVal">96%</span>
+            </div>
+            <div class="metric-bar">
+              <div class="metric-fill" id="delusionFill"></div>
+            </div>
+            <p class="metric-desc">Rises with price volatility and every ego click.</p>
+          </div>
+
+          <div class="metric-card">
+            <div class="metric-header">
+              <span>FOMO Voltage</span>
+              <span id="fomoVal">50%</span>
+            </div>
+            <div class="metric-bar">
+              <div class="metric-fill" id="fomoFill"></div>
+            </div>
+            <p class="metric-desc">Fed by green candles and cursed tweets.</p>
+          </div>
+
+          <div class="metric-card">
+            <div class="metric-header">
+              <span>FEAR Index</span>
+              <span id="fearVal">50%</span>
+            </div>
+            <div class="metric-bar">
+              <div class="metric-fill" id="fearFill"></div>
+            </div>
+            <p class="metric-desc">Spikes when crashes happen or volume dies.</p>
+          </div>
+
+          <div class="metric-card">
+            <div class="metric-header">
+              <span>Liquidity Aura</span>
+              <span id="liqVal">4%</span>
+            </div>
+            <div class="metric-bar">
+              <div class="metric-fill" id="liqFill"></div>
+            </div>
+            <p class="metric-desc">Almost symbolic, just like your risk management.</p>
+          </div>
         </div>
-        <div class="pill">Coming Soon</div>
-      </div>
-      <div class="card-body">
-        Defend the 20% Vault of β from anything that looks like “responsible risk management”.
-        Every wave is more cursed. Every misplay is “for the culture”.
-      </div>
-      <div class="meta">
-        <span>💀 Status: just an idea in a dev’s sleep-deprived notebook.</span>
-      </div>
-      <div class="card-actions">
-        <button class="btn secondary" type="button">Ping dev · 0xBETA</button>
-      </div>
-    </article>
+      </section>
 
-    <!-- Coming Soon · BASE Tunnel Rush -->
-    <article class="card coming-soon">
-      <div class="card-header">
-        <div>
-          <div class="card-title">BASE Tunnel Rush</div>
-          <div class="version">(Reflex · Don’t touch the β walls)</div>
+      <!-- CRASH PANEL -->
+      <section class="panel" id="crashPanel">
+        <header class="panel-header">
+          <h1>Crash Log</h1>
+          <p>Every time you try to go “full alpha”, the universe writes it down.</p>
+        </header>
+        <div class="crash-log" id="crashLog">
+          <!-- entries via JS -->
         </div>
-        <div class="pill">Coming Soon</div>
-      </div>
-      <div class="card-body">
-        Navigate a neon BASE tunnel while the chain throws random volatility at your ego.
-        If you hit the wall, you don’t liquidate… you just get humbled.
-      </div>
-      <div class="meta">
-        <span>⚡ Status: waveform collapsed in another timeline.</span>
-      </div>
-      <div class="card-actions">
-        <button class="btn secondary" type="button">Summon in future patch</button>
-      </div>
-    </article>
-
-  </section>
-
-  <footer>
-    Forged for <span style="color:#4ab6ff;">$GCHB</span> enjoyers.  
-    Return to main lab? <a href="../index.html">Back to <span>β</span>eta</a>
-  </footer>
-</div>
-
+      </section>
+    </main>
+  </div>
 </body>
 </html>
-
-
