--- a/games/index.html
+++ b/games/index.html
@@ -178,6 +178,8 @@
               <li>
                 <span class="game-name">Vault of β — Tower Defense</span>
                 <span class="game-tag">protect the 20% treasury from paper hands</span>
+                <a class="btn-outline small" href="../games/vault/index.html"> Play β Vault</a>
+
               </li>
               <li>
                 <span class="game-name">Runner of Shame</span>
