--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span class="hero-accent">Still Beta.</span>
         </h1>
         <p class="hero-sub">
-          Forged during a sleep-deprived solar flare, GIGACHAD ALPHA (Still Beta) is a memetic anomaly
+          Forged during a rare solar flare, GIGACHAD ALPHA (Still Beta) is a memetic anomaly
           that refuses to leave beta phase. 96% delusion, 4% liquidity, 0% roadmap, 100% BASE energy.
         </p>
         <div class="hero-buttons">
