vault: Add new Tower Defense game "Vault of β"

--- a/games/vault/index.html
+++ b/games/vault/index.html
@@ -5,10 +5,10 @@
   <title>Vault of β — Tower Defense</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="../../GCHAlphaBeta.png" />
-  <link rel="stylesheet" href="/games/vault/vault.css" />
+  <link rel="stylesheet" href="./vault.css" />
   <!-- Optional: shared β state / beta field / ticker -->
-  <script defer src="/games/vault/vault.js"></script>
-  <script defer src="/games/games.js"></script>
+  <script defer src="./vault.js"></script>
+  <script defer src="../games.js"></script>
 </head>
 <body class="vault-body">
   <div class="vault-wrapper">
